profilelist1exp/unpackaged/objects/public_assets_extobj__x.object
<CustomObject>
    <fields>
        <fullName>sales_order_number__c</fullName>
        <description>sales_order_number</description>
        <externalDeveloperName>sales_order_number</externalDeveloperName>
        <label>sales_order_number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sold_by_vce__c</fullName>
        <description>sold_by_vce</description>
        <externalDeveloperName>sold_by_vce</externalDeveloperName>
        <label>sold_by_vce</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceid__c</fullName>
        <description>sourceid</description>
        <externalDeveloperName>sourceid</externalDeveloperName>
        <label>sourceid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>space_usage_rate_gb_per_day__c</fullName>
        <description>space_usage_rate_gb_per_day</description>
        <externalDeveloperName>space_usage_rate_gb_per_day</externalDeveloperName>
        <label>space_usage_rate_gb_per_day</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stg_nm__c</fullName>
        <description>stg_nm</description>
        <externalDeveloperName>stg_nm</externalDeveloperName>
        <label>stg_nm</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>syr_dial_home__c</fullName>
        <description>syr_dial_home</description>
        <externalDeveloperName>syr_dial_home</externalDeveloperName>
        <label>syr_dial_home</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>total_open_srs_allseverity__c</fullName>
        <description>total_open_srs_allseverity</description>
        <externalDeveloperName>total_open_srs_allseverity</externalDeveloperName>
        <label>total_open_srs_allseverity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_sev1_sr_last2_qtrs__c</fullName>
        <description>total_sev1_sr_last2_qtrs</description>
        <externalDeveloperName>total_sev1_sr_last2_qtrs</externalDeveloperName>
        <label>total_sev1_sr_last2_qtrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_storage_capacity_gb__c</fullName>
        <description>total_storage_capacity_gb</description>
        <externalDeveloperName>total_storage_capacity_gb</externalDeveloperName>
        <label>total_storage_capacity_gb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_storage_capacity_used__c</fullName>
        <description>total_storage_capacity_used</description>
        <externalDeveloperName>total_storage_capacity_used</externalDeveloperName>
        <label>total_storage_capacity_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_storage_capacity_used_gb__c</fullName>
        <description>total_storage_capacity_used_gb</description>
        <externalDeveloperName>total_storage_capacity_used_gb</externalDeveloperName>
        <label>total_storage_capacity_used_gb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ucid__c</fullName>
        <description>ucid</description>
        <externalDeveloperName>ucid</externalDeveloperName>
        <label>ucid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vtl__c</fullName>
        <description>vtl</description>
        <externalDeveloperName>vtl</externalDeveloperName>
        <label>vtl</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warranty_end_date__c</fullName>
        <description>warranty_end_date</description>
        <externalDeveloperName>warranty_end_date</externalDeveloperName>
        <label>warranty_end_date</label>
        <type>Date</type>
    </fields>
    <label>Extended Asset</label>
    <pluralLabel>Extended Assets</pluralLabel>
</CustomObject>